[package]
name = "crsw"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "crsw"
path = "lib/lib.rs"

[[bin]]
name = "crsw"
path = "src/main.rs"

[dependencies]
tokio = {version = "1.32.0", features = ["full"]}
json = {version = "0.12.4"}
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0.188", features = ["derive"]}
serde_json = { version = "1.0.106"}
